[1.21.1] ModLoading cleanup and optimisations (#10052)